kubernetes/apps/uptime-kuma/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma-ingressroute-tailscale
  namespace: uptime-kuma
  annotations:
    kubernetes.io/ingress.class: traefik-tailscale
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`uptime-kuma.internal.dmhosted.com`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 3001
  tls:
    secretName: uptime-kuma-certificate-secret-internal
